chore: secure api keys and update project with latest features